--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,5 +1,5 @@
 .element__like {
-    background-image: url(../../../images/like.png);
+    background-image: url(../../../images/like.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent;
@@ -12,5 +12,5 @@
 }
 
 .element__like:hover {
-    opacity: 0.8;
+    opacity: 0.5;
 }
