--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,9 +2,15 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    padding: 0;
-    padding-bottom: 9px;
+    padding: 0 0 9px;
     margin-bottom: 25px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width:720px) {
+    .popup__input {
+        margin-bottom: 20px;
+        margin-left: 22px;
+    }
 }
