--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,8 +1,14 @@
 .element__title {
     color: black;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
+    padding-top: 25px;
+    margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 246px;
+    overflow: hidden;
 }
