--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,12 +2,11 @@
     margin: 0 auto 40px;
     max-width: 880px;
     display: flex;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 999px) {
     .header {
-        margin-top: 28px;
         min-height: 56px;
     }
 }
