--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,3 +5,9 @@
     padding: 0;
     max-width: 358px;
 }
+
+@media screen and (max-width:725px) {
+    .popup__form {
+        margin: 27px auto 25px;
+    }
+}
