--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,14 @@
     margin: 0;
     color: black;
 }
+
+
+@media screen and (max-width:725px) {
+    .popup__title {
+        max-width: 238px;
+        font-size: 18px;
+        line-height: 22px;
+        margin: 25px 22px 0 22px;
+        padding-left: 0;
+    }
+}
