--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,16 +3,17 @@
     height: 50px;
     background-color: transparent;
     border: 2px solid white;
-    background-image: url(../../../images/Vector.png);
+    background-image: url(../../../images/Vector+.svg);
     background-position: center;
     background-repeat: no-repeat;
     transition: opacity .5s ease;
     cursor: pointer;
     border-radius: 2px;
+    margin-top: 35px;
 }
 
 .profile__add-button:hover {
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 768px) {
