--- a/blocks/profile/__edit/profile__button.css
+++ b/blocks/profile/__edit/profile__button.css
@@ -4,7 +4,7 @@
     border: 1px solid white;
     background-color: transparent;
     margin: 15px 0 0 18px;
-    background-image: url(../../../images/Vector2.png);
+    background-image: url(../../../images/Vector.svg);
     background-position: center;
     background-repeat: no-repeat;
     transition: opacity .5s ease;
@@ -12,7 +12,7 @@
 }
 
 .profile__edit:hover {
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 768px) {
