--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,14 +1,15 @@
 .profile__info {
     color: white;
     padding-left: 30px;
+    margin-top: 22px;
 }
 
 @media screen and (max-width: 768px) {
     .profile__info{
         padding: 0;
-        padding-left: 0;
         font-size: 27px;
         line-height: 33px;
         margin-left: 46px;
+        margin-top: 0;
     }
 }
