--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,14 +3,13 @@
     font-size: 14px;
     line-height: 17px;
     padding: 0 0 9px;
-    margin-bottom: 25px;
+    margin: 0 22px 25px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (max-width:720px) {
     .popup__input {
-        margin-bottom: 20px;
-        margin-left: 22px;
+        margin-bottom: 30px;
     }
 }
