--- a/blocks/profile/__edit/profile__button.css
+++ b/blocks/profile/__edit/profile__button.css
@@ -20,6 +20,8 @@
         width: 18px;
         height: 18px;
         margin: 8px 19px 0 10px;
+        background-size: 7.5px 7.5px;
+
         
     }
 }
