--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -5,7 +5,7 @@
     background-color: transparent;
     border: none;
     margin: 30px 20px 30px 0;
-    width: 22px;
+    min-width: 22px;
     height: 19px;
     transition: opacity .5s ease;
     cursor: pointer;
