--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,7 +7,7 @@
 @media screen and (max-width: 768px) {
     .footer  {
         max-width: 282px;
-        margin: 48px auto 36px;
+        margin: 48px auto 0;
         display: block;
     }
 }
