--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -16,3 +16,16 @@
 .popup__close-button:hover {
     opacity: 0.6;
 }
+
+
+
+@media screen and (max-width: 600px) {
+    .popup__close-button {
+        min-width: 20px;
+        background-size: 20px 20px;
+        min-height: 20px;
+        background-repeat: no-repeat;
+        right: 0;
+        top: -36px;
+    }
+}
