--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -23,6 +23,7 @@
         min-height: 46px;
         font-size: 14px;
         line-height: 17px;
-        margin: 28px auto 0;
+        margin: 15px auto 25px auto;
+      
     }
 }
