--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -13,7 +13,8 @@
         max-width: 238px;
         font-size: 18px;
         line-height: 22px;
-        margin: 25px 22px 0 22px;
-        padding-left: 0;
+        max-width: 238px;
+        margin: 25px 22px 75px 22px;
+        padding: 0;
     }
 }
