--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
+    width: 100%;
     top: 0;
     bottom: 0;
     left: 0;
