--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,6 +7,7 @@
     background-position: center;
     background-repeat: no-repeat;
     transition: opacity .5s ease;
+    background-size: 22px;
     cursor: pointer;
     border-radius: 2px;
     margin-top: 35px;
