--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -20,5 +20,6 @@
 @media screen and (max-width: 768px) {
     .profile__add-button {
         width: 282px;
+        background-size: 16px;
     }
 }
