--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,6 +1,6 @@
 .profile__edit {
-    width: 24px;
-    height: 24px;
+    min-width: 24px;
+    min-height: 24px;
     border: 1px solid white;
     background-color: transparent;
     margin: 15px 0 0 18px;
@@ -17,8 +17,8 @@
 
 @media screen and (max-width: 768px) {
     .profile__edit {
-        width: 18px;
-        height: 18px;
+        min-width: 18px;
+        min-height: 18px;
         margin: 8px 19px 0 10px;
         background-size: 7.5px 7.5px;
 
